19859
Since it won't be made regular by loosening, it should be made regular by tightening to the spec, with deprecation and correct behavior in future.
{code}
scala> val x, _x, x_, x_y = 42
x: Int = 42
_x: Int = 42
x_: Int = 42
x_y: Int = 42

scala> s"$_x"  // error message could be more specific
<console>:1: error: error in interpolated string: identifier or block expected
s"$_x"
   ^

scala> s"$x_"  // should be "42_"
res0: String = 42

scala> s"$x_y"  // "42_y"
res1: String = 42
{code}
